# Line_Descriptor

./: CMakeLists.txt  README.md
algorithm/: CMakeLists.txt
algorithm/include/: SC2.h  TINConstruct.h  descriptor.h  match.h  tree_point.h
algorithm/src/: SC2.cpp  TINConstruct.cpp  descriptor.cpp  match.cpp  tree_point.cpp
examples/: CMakeLists.txt  exam_triangle.cpp  main.cpp
